--- a/rw-gql/pom.xml
+++ b/rw-gql/pom.xml
@@ -19,7 +19,7 @@
     <vertx.version>4.1.5</vertx.version>
     <junit-jupiter.version>5.7.0</junit-jupiter.version>
 
-    <main.verticle>com.realworld.rw_gql.MainVerticle</main.verticle>
+    <main.verticle>com.realworld.gql.MainVerticle</main.verticle>
     <launcher.class>io.vertx.core.Launcher</launcher.class>
   </properties>
 
